--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "homepage",
   "version": "0.1.0",
-  "homepage": "zidanekarim.me",
+  "homepage": "https://ThePotatoPowers.github.io/",
+  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
